--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+2.3-mls (12 Aug 2004)
+
+Updated winamp plugin, thanks to K`rai.
+
 2.2-mls (1 May 2004)
 
 Added README.cl-amp (taken from Eli's page).
