--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+2.4-mls (13 Sept 2005)
+
+Updated nosefart code for gcc-4.0.
+
+gnosefart updated to 1.2.
+
 2.3-mls (12 Aug 2004)
 
 Updated winamp plugin, thanks to K`rai.
