--- a/src/gnosefart/ChangeLog
+++ b/src/gnosefart/ChangeLog
@@ -1,3 +1,12 @@
+1.2 - 13 Sept 2005
+
+Default changed to 2 repetitions (from forever).
+
+New version of GTK (I think) causes line breaks in the status bar
+to not work.  "Fixed" by restricting output to one line.  This
+removes some of the interesting information, but I don't have the
+energy to code a better fix.
+
 1.1 - ?? May 2004
 
 File selection behavior improved.
