--- a/src/gnosefart/ChangeLog
+++ b/src/gnosefart/ChangeLog
@@ -1,3 +1,11 @@
+1.3 - 
+
+The file selection dialog now remember what directory you used in the
+last session (using ~/.gnosefart).
+
+If esd (or something else) is blocking the sound card, it now pops up 
+an error rather than just hanging.
+
 1.2 - 13 Sept 2005
 
 Default changed to 2 repetitions (from forever).
