--- a/src/gnosefart/ChangeLog
+++ b/src/gnosefart/ChangeLog
@@ -1,4 +1,10 @@
-1.3 - 
+1.4 - 22 Sept 2005
+
+Now handles spaces in filenames (how embarrassing that it didn't!).
+
+Handles bad files more gracefully.
+
+1.3 - 20 Sept 2005
 
 The file selection dialog now remember what directory you used in the
 last session (using ~/.gnosefart).
